- 에러코드 정의 - 캐시 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 spring.application.name=lee-shopping
-spring.config.import=classpath:application-jpa.properties
+spring.config.import=classpath:application-jpa.properties, classpath:application-cache.properties
 # \uAE30\uBCF8 \uB85C\uAE45 \uB808\uBCA8 \uC124\uC815
-logging.level.root=DEBUG
-logging.level.com.lee.architecture=DEBUG
-logging.level.org.springframework.web=ERROR
-# Hibernate SQL \uB85C\uADF8 \uCD9C\uB825
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.root=INFO
+logging.level.com.lee.architecture=INFO
+logging.level.org.springframework.web=INFO
 
+# Hibernate SQL \uB85C\uADF8 \uCD9C\uB825
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql=INFO
+
+logging.level.com.zaxxer.hikari.HikariConfig=INFO
+logging.level.com.zaxxer.hikari=INFO
+logging.level.org.mybatis.spring.transaction.SpringManagedTransaction=INFO
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
+
+
+# \uCE90\uC2DC \uB85C\uADF8
+logging.level.org.springframework.cache=TRACE
+logging.level.org.springframework.cache.interceptor.CacheInterceptor=TRACE
+logging.level.com.github.benmanes.caffeine.cache=TRACE
