- 상품 랭킹 관련 테스트 코드 추가 - LocalCacheManager 추가

--- a/src/main/resources/application-jpa.properties
+++ b/src/main/resources/application-jpa.properties
@@ -1,5 +1,5 @@
 
-# H2
+# H2 in-memory\uC758 \uACBD\uC6B0 hikari pool \uAD00\uB828 \uC124\uC815\uC774 \uC801\uC6A9\uC774 \uC548\uB420\uC218 \uC788\uC74C.
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:my;DB_CLOSE_DELAY=-1
 spring.datasource.hikari.username=sa
 spring.datasource.hikari.password=
@@ -8,7 +8,7 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.max-lifetime=900000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=my-hikari-pool
-spring.datasource.hikari.transaction-isolation=1
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=true
@@ -24,7 +24,3 @@ spring.jpa.properties.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.properties.jdbc.batch_size=500
-spring.jpa.properties.order_inserts=true
-spring.jpa.properties.order_updates=true
-spring.jpa.properties.generate_statistics=true
